--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
 
 <script>
 
+let sprites = [];
 
   // Returns an object containing resources that will be used later for drawing
   function resources() {
@@ -91,23 +92,11 @@
       ctx.drawImage(res.player, 0, 0);
       ctx.setTransform(1, 0, 0, 1, 0, 0);
 
+
       ctx.fillStyle = "black";
       //ctx.fillRect(x - 17, y - 12, 4, 4);
     }
 
-    function draw_enemy(x, y, radius) {
-	res.enemy.width = radius;
-    res.enemy.height = radius;
-    let eCtx = res.enemy.getContext('2d');
-    eCtx.fillStyle = "yellow";
-    eCtx.beginPath();
-    eCtx.arc(10, 10, radius, 0, 2 * Math.PI);
-    eCtx.fill();
-    ctx.drawImage(res.enemy, x - radius, y - radius);
-	ctx.fillStyle = "orange";
-    ctx.textBaseline = "top";
-    ctx.font = "20px sans-serif";
-	}
 
     function draw_bullet(x, y) {
       ctx.drawImage(res.bullet, x - 3, y - 3);
@@ -150,6 +139,13 @@
 		ctx.stroke();
 	}
 
+	// this just doesn't work
+	function draw_sprite(sprite_id, frame_index, x, y) {
+		if (sprites[sprite_id] != "undefined" && sprites[sprite_id][frame_index] != "undefined") {
+			ctx.putImageData(sprites[sprite_id][frame_index].image_data, x, y);
+		}
+	}
+
 	function draw_debug(a,b,c,d) {
 	  ctx.fillStyle = "orange";
       ctx.textBaseline = "top";
@@ -161,7 +157,7 @@
 	}
 
     // The real loading and running of our wasm starts here
-    let imports = { clear_screen, draw_player, draw_enemy, draw_bullet, draw_particle, draw_hud, draw_debug, draw_bounds, draw_intro, draw_game_over };
+    let imports = { clear_screen, draw_player, draw_bullet, draw_particle, draw_hud, draw_debug, draw_bounds, draw_intro, draw_game_over, draw_sprite };
     imports.Math_atan = Math.atan;
     imports.sin = Math.sin;
     imports.cos = Math.cos;
@@ -183,6 +179,9 @@
     module.toggle_right = mod.exports.toggle_right;
     module.resize = mod.exports.resize;
     module.draw = mod.exports.draw;
+	module.init = mod.exports.init;
+
+	module.init();
 
     // Input processing
     function processKey(key, b) {
@@ -202,12 +201,65 @@
     document.addEventListener('keydown', e => processKey(e.key, true));
     document.addEventListener('keyup', e => processKey(e.key, false));
 
+	function init_sprites(res) {
+		let enemy1_0 = [
+			0,0,1,0,0,0,0,0,1,0,0,
+			0,0,0,1,0,0,0,1,0,0,0,
+			0,0,1,1,1,1,1,1,1,0,0,
+			0,1,1,0,1,1,1,0,1,1,0,
+			1,1,1,1,1,1,1,1,1,1,1,
+			1,0,1,1,1,1,1,1,1,0,1,
+			1,0,1,0,0,0,0,0,1,0,1,
+			0,0,0,1,1,0,1,1,0,0,0
+		];
+
+		let enemy1_1 = [
+			0,0,1,0,0,0,0,0,1,0,0,
+			1,0,0,1,0,0,0,1,0,0,1,
+			1,0,1,1,1,1,1,1,1,0,1,
+			1,1,1,0,1,1,1,0,1,1,1,
+			1,1,1,1,1,1,1,1,1,1,1,
+			0,0,1,1,1,1,1,1,1,0,0,
+			0,0,1,0,0,0,0,0,1,0,0,
+			0,1,0,0,0,0,0,0,0,1,0
+		];
+
+		init_sprite_frame_js(res, 0, 0, enemy1_0, 11, 8);
+		init_sprite_frame_js(res, 0, 1, enemy1_1, 11, 8);
+	}
+
+	function init_sprite_frame_js(res, sprite_id, frame_index, data, w, h) {
+
+		if (typeof(sprites[sprite_id]) == "undefined") {
+			sprites[sprite_id] = [];
+		}
+
+		// TODO does this leak if we call this multiple times?
+		sprites[sprite_id][frame_index] = {
+			image_data: canvas.getContext("2d").createImageData(w,h),
+			w: w,
+			h: h
+		}
+		for (var i=0;i<w;++i) {
+			for (var j=0;j<h;++j) {
+					var source_index = j*w + i;
+					var dest_index = source_index*4;
+					var value = data[source_index] > 0 ? 255 : 0;
+					sprites[sprite_id][frame_index].image_data.data[dest_index] = value;
+					sprites[sprite_id][frame_index].image_data.data[dest_index+1] = value;
+					sprites[sprite_id][frame_index].image_data.data[dest_index+2] = value;
+					sprites[sprite_id][frame_index].image_data.data[dest_index+3] = 255;
+			}
+		}
+	}
+
     // Resizing
     function resize() {
       // We make the canvas somewhat smaller to get some zooming
       canvas.width = window.innerWidth * 0.8;
       canvas.height = window.innerHeight * 0.8;
       module.resize(canvas.width, canvas.height);
+	  init_sprites();
     }
     window.addEventListener('resize', () => {
       resize();
