WIP: event handling crashes when calling `recv` so I'm going to build this as a local lib and try to debug it

--- a/html/index.html
+++ b/html/index.html
@@ -497,7 +497,7 @@ function copyCStr(module, ptr) {
       // Update and draw
       let progress = (timestamp - prevTimestamp) / 1000;
       module.update(progress);
-      module.draw();
+      module.draw(progress);
 
       // Some bookkeeping
       prevTimestamp = timestamp;
